// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/HStack passes the snapshot test 1`] = `
<View
  direction="horizontal"
  divider={<ForwardRef />}
  spacing="l"
  style={
    Object {
      "alignSelf": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 100,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": "100%",
          "marginLeft": 24,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": "100%",
          "marginLeft": 24,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": "100%",
          "marginLeft": 24,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Atoms/Stack passes the snapshot test for horizontal direction 1`] = `
<View
  direction="horizontal"
  divider={<ForwardRef />}
  spacing="l"
  style={
    Object {
      "alignSelf": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 100,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": "100%",
          "marginLeft": 24,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": "100%",
          "marginLeft": 24,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": "100%",
          "marginLeft": 24,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Atoms/Stack passes the snapshot test for vertical direction 1`] = `
<View
  direction="vertical"
  divider={<ForwardRef />}
  spacing="l"
  style={
    Object {
      "alignSelf": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
      "marginTop": 24,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 100,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": 1,
          "marginTop": 24,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": "40%",
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": 1,
          "marginTop": 24,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": 1,
          "marginTop": 24,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Atoms/VStack passes the snapshot test 1`] = `
<View
  direction="vertical"
  divider={<ForwardRef />}
  spacing="l"
  style={
    Object {
      "alignSelf": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 100,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": 1,
          "marginTop": 24,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": 1,
          "marginTop": 24,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
        "marginBottom": 24,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#E4E9F2",
          "display": "flex",
          "height": 1,
          "marginTop": 24,
          "width": "100%",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "column",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 20,
          "width": 20,
        }
      }
    />
  </View>
</View>
`;

exports[`Atoms/ZStack passes the snapshot test 1`] = `
Array [
  <View
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 100,
          "position": "relative",
          "width": 100,
          "zIndex": 0,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#8F9BB3",
          "display": "flex",
          "height": 50,
          "position": "absolute",
          "width": 50,
          "zIndex": 1,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FF4B42",
          "display": "flex",
          "height": 20,
          "position": "absolute",
          "width": 20,
          "zIndex": 2,
        }
      }
    />
  </View>,
  <View
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "marginTop": 32,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 100,
          "position": "relative",
          "width": 100,
          "zIndex": 3,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#8F9BB3",
          "display": "flex",
          "height": 50,
          "position": "absolute",
          "width": 50,
          "zIndex": 2,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FF4B42",
          "display": "flex",
          "height": 20,
          "position": "absolute",
          "width": 20,
          "zIndex": 1,
        }
      }
    />
  </View>,
  <View
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "marginTop": 32,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#6A7BFF",
          "display": "flex",
          "height": 100,
          "position": "relative",
          "width": 100,
          "zIndex": 0,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#8F9BB3",
          "display": "flex",
          "height": 50,
          "position": "absolute",
          "width": 50,
          "zIndex": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "#FF4B42",
          "display": "flex",
          "height": 20,
          "position": "absolute",
          "width": 20,
          "zIndex": 2,
        }
      }
    />
  </View>,
]
`;
